--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  text-align: center;
+  background: #121212;
+}
+
+.main {
+  margin: 0 auto;
+  width: 450px;
+  padding: 50px 50px;
+  color: #fff;
+  background: #121212;
+}
+
+.nameInput {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.nameInput div {
+  width: 48%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo div {
+  height: 50px;
+  width: 50px;
+  margin: 75px auto;
+  background: #f48fb2;
+  border-radius: 50%;
+}
+.logo img {
+  height: 70%;
+  padding-top: 10%;
+  object-fit: contain;
+}
+
+.buttons {
+  margin: 0 35px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+a {
+  color: lightblue;
+  cursor: pointer;
+}
+
+h5 {
+  margin-top: 100px;
+  font-weight: 400;
+  color: grey;
 }
